[fix]: [PL-39107]: Adds support for sending sync notifications and custom message body (#55017)
* [fix]: [PL-39107]: Adds message in webhook notification request

* [fix]: [PL-39107]: Adds message field in webhook notification channel

* [fix]: [PL-39107]: Adds method to send sync notification in channel service alo implements for webhook channel

* [fix]: [PL-39107]: Adds endpoint to send sync notification in channel resource

* [fix]: [PL-39107]: Adds endpoint to send sync notification in notification http client

* [fix]: [PL-39107]: Adds support to send sync notification in notification client

* [fix]: [PL-39107]: Adds message field in slack notification channel

* [fix]: [PL-39107]: Implements sync notification for slack channel

* [fix]: [PL-39107]: Implements sync notification for ms teams channel

* [fix]: [PL-39107]: Implements sync notification for pager duty channel

* [fix]: [PL-39107]: Implements sync notification for email channel

* [fix]: [PL-39107]: Fixing setters for new fields in all notification channels

* [fix]: [PL-39107]: Adds notification request dto for wrapping notification bytes

* [fix]: [PL-39107]: Updates notification client to use notification request dto

* [fix]: [PL-39107]: Adds error handling for webhook notification

* [fix]: [PL-39107]: Adds error handling for microsoft teams webhook notification

* [fix]: [PL-39107]: Adds error handling for slack notification

* [fix]: [PL-39107]: Adds error handling for pagerduty notification

* [fix]: [PL-39107]: Adds error handling for email notification

* [fix]: [PL-39107]: Removes empty template id check for all sync notifications

* [fix]: [PL-39107]: Allows empty template id and template data for all notifications

* [fix]: [PL-39107]: Adds unit tests for sync notification in all notification channels

* [fix]: [PL-39107]: Marks new fields as optional in all notification channels

* [fix]: [PL-39107]: Adds support for custom content in asyn