@@ -10,6 +10,7 @@ package io.harness.notification.service;
 import static io.harness.annotations.dev.HarnessTeam.PL;
 import static io.harness.rule.OwnerRule.ANKUSH;
 import static io.harness.rule.OwnerRule.ARVIND;
+import static io.harness.rule.OwnerRule.ASHISHSANODIA;
 import static io.harness.rule.OwnerRule.RICHA;
 
 import static junit.framework.TestCase.assertEquals;
@@ -20,6 +21,9 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mockStatic;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 
 import io.harness.CategoryTest;
@@ -68,6 +72,7 @@ import retrofit2.Call;
 
 @OwnedBy(PL)
 public class MailServiceImplTest extends CategoryTest {
+  private static final String TEST_NOTIFICATION_TEMPLATE_CONTENT = "This is a test notification";
   @Mock private NotificationSettingsService notificationSettingsService;
   @Mock private NotificationTemplateService notificationTemplateService;
   @Mock private YamlUtils yamlUtils;
@@ -100,7 +105,6 @@ public class MailServiceImplTest extends CategoryTest {
     emailTemplate.setBody("this is test mail");
     emailTemplate.setSubject("test notification");
     restUtilsMockedStatic = mockStatic(NGRestUtils.class);
-    //    when(NGRestUtils.getResponse(any())).thenReturn(true);
 
     when(NGRestUtils.getResponse(responseTrue)).thenReturn(true);
     when(NGRestUtils.getResponse(responseFalse)).thenReturn(false);
@@ -135,22 +139,7 @@ public class MailServiceImplTest extends CategoryTest {
   }
 
   @Test
-  @Owner(developers = ANKUSH)
-  @Category(UnitTests.class)
-  public void sendNotification_NoTemplateIdInRequest() {
-    NotificationRequest notificationRequest =
-        NotificationRequest.newBuilder()
-            .setId(id)
-            .setAccountId(accountId)
-            .setEmail(
-                NotificationRequest.Email.newBuilder().addAllEmailIds(Collections.singletonList(emailAdress)).build())
-            .build();
-    NotificationProcessingResponse notificationProcessingResponse = mailService.send(notificationRequest);
-    assertTrue(notificationProcessingResponse.equals(NotificationProcessingResponse.trivialResponseWithNoRetries));
-  }
-
-  @Test
-  @Owner(developers = ANKUSH)
+  @Owner(developers = {ANKUSH, ASHISHSANODIA})
   @Category(UnitTests.class)
   public void sendNotification_NoRecipientInRequest() {
     NotificationRequest notificationRequest = NotificationRequest.newBuilder()
@@ -165,11 +154,37 @@ public class MailServiceImplTest extends CategoryTest {
     assertTrue(notificationProcessingResponse.equals(NotificationProcessingResponse.trivialResponseWithNoRetries));
   }
 
+  @Test
+  @Owner(developers = ASHISHSANODIA)
+  @Category(UnitTests.class)
+  public void sendNotification_ValidCase_WithoutTemplateId_WithCustomContent() {
+    NotificationRequest.Email emailBuilder = NotificationRequest.Email.newBuilder()
+                                                 .addAllEmailIds(Collections.singletonList(emailAdress))
+                                                 .addAllCcEmailIds(Collections.singletonList(VALID_EMAIL_1))
+                                                 .setSubject("some-subject")
+                                                 .setBody("some-body-content")
+                                                 .build();
+    NotificationRequest notificationRequest =
+        NotificationRequest.newBuilder().setId(id).setAccountId(accountId).setEmail(emailBuilder).build();
+    NotificationProcessingResponse notificationExpectedResponse =
+        NotificationProcessingResponse.builder().result(List.of(true)).shouldRetry(false).build();
+    when(mailSender.send(any(), any(), any(), any(), any(), any())).thenReturn(notificationExpectedResponse);
+    when(notificationSettingsService.getSmtpConfigResponse(eq(accountId))).thenReturn(new SmtpConfigResponse());
+
+    NotificationProcessingResponse notificationProcessingResponse = mailService.send(notificationRequest);
+
+    verifyNoInteractions(notificationTemplateService);
+    verify(mailSender, times(1))
+        .send(any(), eq(emailBuilder.getCcEmailIdsList()), eq(emailBuilder.getSubject()), eq(emailBuilder.getBody()),
+            any(), any());
+    assertEquals(notificationProcessingResponse, notificationExpectedResponse);
+  }
+
   @SneakyThrows
   @Test
-  @Owner(developers = ANKUSH)
+  @Owner(developers = {ANKUSH, ASHISHSANODIA})
   @Category(UnitTests.class)
-  public void sendNotification_ValidCase() {
+  public void sendNotification_ValidCase_WithoutDelegate() {
     NotificationRequest notificationRequest = NotificationRequest.newBuilder()
                                                   .setId(id)
                                                   .setAccountId(accountId)
@@ -179,28 +194,60 @@ public class MailServiceImplTest extends CategoryTest {
                                                                 .build())
                                                   .build();
     NotificationProcessingResponse notificationExpectedResponse =
-        NotificationProcessingResponse.builder().result(Arrays.asList(true, false)).shouldRetry(false).build();
+        NotificationProcessingResponse.builder().result(List.of(true)).shouldRetry(false).build();
     when(notificationTemplateService.getTemplateAsString(eq(mailTemplateName), any()))
-        .thenReturn(Optional.empty(), Optional.of("This is a test notification"));
-    when(notificationSettingsService.getSendNotificationViaDelegate(eq(accountId))).thenReturn(false);
-    when(notificationSettingsService.getSmtpConfig(eq(accountId))).thenReturn(Optional.of(smtpConfigDefault));
+        .thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE_CONTENT));
     when(mailSender.send(any(), any(), any(), any(), any(), any())).thenReturn(notificationExpectedResponse);
     when(yamlUtils.read(any(), (TypeReference<EmailTemplate>) any())).thenReturn(emailTemplate);
     when(notificationSettingsService.getSmtpConfigResponse(eq(accountId))).thenReturn(new SmtpConfigResponse());
 
     NotificationProcessingResponse notificationProcessingResponse = mailService.send(notificationRequest);
-    assertTrue(notificationProcessingResponse.equals(NotificationProcessingResponse.trivialResponseWithNoRetries));
-    notificationExpectedResponse =
-        NotificationProcessingResponse.builder().result(Arrays.asList(true)).shouldRetry(false).build();
-    when(notificationSettingsService.getSmtpConfigResponse(eq(accountId)))
-        .thenReturn(new SmtpConfigResponse(SmtpConfig.builder().build(), Collections.EMPTY_LIST));
+
+    assertTrue(notificationProcessingResponse.equals(notificationExpectedResponse));
+  }
+
+  @SneakyThrows
+  @Test
+  @Owner(developers = ASHISHSANODIA)
+  @Category(UnitTests.class)
+  public void sendNotification_ValidCase_WithDelegate() {
+    NotificationRequest notificationRequest =
+        NotificationRequest.newBuilder()
+            .setId(id)
+            .setAccountId(accountId)
+            .setEmail(NotificationRequest.Email.newBuilder()
+                          .setTemplateId(mailTemplateName)
+                          .addAllEmailIds(Collections.singletonList(emailAdress))
+                          .addAllCcEmailIds(Collections.singletonList(emailAdress))
+                          .build())
+            .build();
+    NotificationProcessingResponse notificationExpectedResponse =
+        NotificationProcessingResponse.builder().result(List.of(true)).shouldRetry(false).build();
     when(notificationTemplateService.getTemplateAsString(eq(mailTemplateName), any()))
-        .thenReturn(Optional.of("this is test notification"));
-    when(notificationSettingsService.getSendNotificationViaDelegate(eq(accountId))).thenReturn(true);
-    when(delegateGrpcClientWrapper.executeSyncTaskV2(any()))
-        .thenReturn(NotificationTaskResponse.builder().processingResponse(notificationExpectedResponse).build());
+        .thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE_CONTENT));
+    when(yamlUtils.read(any(), (TypeReference<EmailTemplate>) any())).thenReturn(emailTemplate);
+    doReturn(new SmtpConfigResponse(SmtpConfig.builder().build(), Collections.emptyList()))
+        .when(notificationSettingsService)
+        .getSmtpConfigResponse(any());
     when(delegateGrpcClientWrapper.submitAsyncTaskV2(any(), any())).thenReturn("");
-    notificationProcessingResponse = mailService.send(notificationRequest);
+
+    NotificationProcessingResponse notificationProcessingResponse = mailService.send(notificationRequest);
+
+    ArgumentCaptor<DelegateTaskRequest> delegateTaskRequestArgumentCaptor =
+        ArgumentCaptor.forClass(DelegateTaskRequest.class);
+    verify(delegateGrpcClientWrapper, times(1)).submitAsyncTaskV2(delegateTaskRequestArgumentCaptor.capture(), any());
+
+    DelegateTaskRequest actualDelegateTaskRequest = delegateTaskRequestArgumentCaptor.getValue();
+    MailTaskParams mailTaskParams = (MailTaskParams) actualDelegateTaskRequest.getTaskParameters();
+
+    assertThat(mailTaskParams.getEmailIds()).isNotEmpty();
+    assertThat(mailTaskParams.getEmailIds()).hasSize(1);
+    assertThat(mailTaskParams.getEmailIds()).contains(emailAdress);
+    assertThat(mailTaskParams.getCcEmailIds()).isNotEmpty();
+    assertThat(mailTaskParams.getCcEmailIds()).hasSize(1);
+    assertThat(mailTaskParams.getCcEmailIds()).contains(emailAdress);
+    assertEquals(emailTemplate.getSubject(), mailTaskParams.getSubject());
+    assertEquals(emailTemplate.getBody(), mailTaskParams.getBody());
     assertEquals(notificationExpectedResponse, notificationProcessingResponse);
   }
 
@@ -226,7 +273,7 @@ public class MailServiceImplTest extends CategoryTest {
     NotificationProcessingResponse notificationExpectedResponse =
         NotificationProcessingResponse.builder().result(Arrays.asList(true)).shouldRetry(false).build();
     when(notificationTemplateService.getTemplateAsString(eq(mailTemplateName), any()))
-        .thenReturn(Optional.empty(), Optional.of("This is a test notification"));
+        .thenReturn(Optional.empty(), Optional.of(TEST_NOTIFICATION_TEMPLATE_CONTENT));
     when(notificationSettingsService.getSendNotificationViaDelegate(eq(accountId))).thenReturn(false);
     when(notificationSettingsService.getSmtpConfig(eq(accountId))).thenReturn(Optional.of(smtpConfigDefault));
     when(mailSender.send(any(), any(), any(), any(), any(), any())).thenReturn(notificationExpectedResponse);
@@ -275,7 +322,7 @@ public class MailServiceImplTest extends CategoryTest {
         NotificationProcessingResponse.builder().result(Arrays.asList(true)).shouldRetry(false).build();
     when(mailSender.send(any(), any(), any(), any(), any(), any())).thenReturn(notificationExpectedResponse);
     when(notificationTemplateService.getTemplateAsString(any(), any()))
-        .thenReturn(Optional.of("This is a test notification"));
+        .thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE_CONTENT));
     when(yamlUtils.read(any(), (TypeReference<EmailTemplate>) any())).thenReturn(emailTemplate);
     boolean response = mailService.sendTestNotification(notificationSettingDTO4);
     assertTrue(response);
@@ -296,7 +343,7 @@ public class MailServiceImplTest extends CategoryTest {
         NotificationProcessingResponse.builder().result(Arrays.asList(true)).shouldRetry(false).build();
     when(mailSender.send(any(), any(), any(), any(), any(), any())).thenReturn(notificationExpectedResponse);
     when(notificationTemplateService.getTemplateAsString(any(), any()))
-        .thenReturn(Optional.of("This is a test notification"));
+        .thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE_CONTENT));
     when(yamlUtils.read(any(), (TypeReference<EmailTemplate>) any())).thenReturn(emailTemplate);
     NotificationTaskResponse response = mailService.sendEmail(emailDTO);
     assertTrue(response.getProcessingResponse().getResult().iterator().next());
@@ -317,7 +364,7 @@ public class MailServiceImplTest extends CategoryTest {
         NotificationProcessingResponse.builder().result(Arrays.asList(true)).shouldRetry(false).build();
     when(mailSender.send(any(), any(), any(), any(), any(), any())).thenReturn(notificationExpectedResponse);
     when(notificationTemplateService.getTemplateAsString(any(), any()))
-        .thenReturn(Optional.of("This is a test notification"));
+        .thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE_CONTENT));
     when(yamlUtils.read(any(), (TypeReference<EmailTemplate>) any())).thenReturn(emailTemplate);
     assertThatThrownBy(() -> mailService.sendEmail(emailDTO)).isInstanceOf(NotificationException.class);
   }
@@ -339,7 +386,7 @@ public class MailServiceImplTest extends CategoryTest {
         NotificationProcessingResponse.builder().result(Arrays.asList(true)).shouldRetry(false).build();
     when(mailSender.send(any(), any(), any(), any(), any(), any())).thenReturn(notificationExpectedResponse);
     when(notificationTemplateService.getTemplateAsString(any(), any()))
-        .thenReturn(Optional.of("This is a test notification"));
+        .thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE_CONTENT));
     when(yamlUtils.read(any(), (TypeReference<EmailTemplate>) any())).thenReturn(emailTemplate);
     assertThatThrownBy(() -> mailService.sendEmail(emailDTO)).isInstanceOf(NotificationException.class);
   }
@@ -357,7 +404,7 @@ public class MailServiceImplTest extends CategoryTest {
         NotificationProcessingResponse.builder().result(Arrays.asList(true)).shouldRetry(false).build();
     when(mailSender.send(any(), any(), any(), any(), any(), any())).thenReturn(notificationExpectedResponse);
     when(notificationTemplateService.getTemplateAsString(any(), any()))
-        .thenReturn(Optional.of("This is a test notification"));
+        .thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE_CONTENT));
     when(yamlUtils.read(any(), (TypeReference<EmailTemplate>) any())).thenReturn(emailTemplate);
     assertThatThrownBy(() -> mailService.sendEmail(emailDTO)).isInstanceOf(NotificationException.class);
   }
@@ -376,7 +423,7 @@ public class MailServiceImplTest extends CategoryTest {
         NotificationProcessingResponse.builder().result(Arrays.asList(false)).shouldRetry(false).build();
     when(mailSender.send(any(), any(), any(), any(), any(), any())).thenReturn(notificationExpectedResponse);
     when(notificationTemplateService.getTemplateAsString(any(), any()))
-        .thenReturn(Optional.of("This is a test notification"));
+        .thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE_CONTENT));
     when(yamlUtils.read(any(), (TypeReference<EmailTemplate>) any())).thenReturn(emailTemplate);
     assertThatThrownBy(() -> mailService.sendEmail(emailDTO)).isInstanceOf(NotificationException.class);
   }
@@ -402,7 +449,7 @@ public class MailServiceImplTest extends CategoryTest {
     when(mailSender.send(toCaptor.capture(), ccCaptor.capture(), any(), any(), any(), any()))
         .thenReturn(notificationExpectedResponse);
     when(notificationTemplateService.getTemplateAsString(any(), any()))
-        .thenReturn(Optional.of("This is a test notification"));
+        .thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE_CONTENT));
     when(yamlUtils.read(any(), (TypeReference<EmailTemplate>) any())).thenReturn(emailTemplate);
     NotificationTaskResponse response = mailService.sendEmail(emailDTO);
     assertTrue(response.getProcessingResponse().getResult().iterator().next());
@@ -431,10 +478,168 @@ public class MailServiceImplTest extends CategoryTest {
         .thenReturn(NotificationTaskResponse.builder().processingResponse(notificationExpectedResponse).build());
     when(notificationSettingsService.getSendNotificationViaDelegate(eq(accountId))).thenReturn(true);
     when(notificationSettingsService.getSmtpConfigResponse(eq(accountId)))
-        .thenReturn(new SmtpConfigResponse(SmtpConfig.builder().build(), Collections.EMPTY_LIST));
+        .thenReturn(new SmtpConfigResponse(SmtpConfig.builder().build(), Collections.emptyList()));
     mailService.sendEmail(emailDTO);
     DelegateTaskRequest request = requestCaptor.getValue();
     assertThat(((MailTaskParams) request.getTaskParameters()).getEmailIds().size()).isEqualTo(2);
     assertThat(((MailTaskParams) request.getTaskParameters()).getCcEmailIds().size()).isEqualTo(2);
+  }
+
+  @Test
+  @Owner(developers = ASHISHSANODIA)
+  @Category(UnitTests.class)
+  public void sendSyncNotification_EmptyRequest() {
+    NotificationRequest notificationRequest = NotificationRequest.newBuilder().build();
+
+    assertThatThrownBy(() -> mailService.sendSync(notificationRequest))
+        .isInstanceOf(NotificationException.class)
+        .hasMessage("Invalid email notification request");
+  }
+
+  @Test
+  @Owner(developers = ASHISHSANODIA)
+  @Category(UnitTests.class)
+  public void sendSyncNotification_OnlyIdInRequest() {
+    NotificationRequest notificationRequest = NotificationRequest.newBuilder().setId(id).build();
+
+    assertThatThrownBy(() -> mailService.sendSync(notificationRequest))
+        .isInstanceOf(NotificationException.class)
+        .hasMessage("Invalid email notification request");
+  }
+
+  @Test
+  @Owner(developers = ASHISHSANODIA)
+  @Category(UnitTests.class)
+  public void sendSyncNotification_NoAccountIdInRequest() {
+    NotificationRequest notificationRequest =
+        NotificationRequest.newBuilder().setId(id).setEmail(NotificationRequest.Email.newBuilder().build()).build();
+
+    assertThatThrownBy(() -> mailService.sendSync(notificationRequest))
+        .isInstanceOf(NotificationException.class)
+        .hasMessageContaining("No account id encountered for");
+  }
+
+  @Test
+  @Owner(developers = ASHISHSANODIA)
+  @Category(UnitTests.class)
+  public void sendSyncNotification_NoRecipientInRequest() {
+    NotificationRequest notificationRequest = NotificationRequest.newBuilder()
+                                                  .setId(id)
+                                                  .setAccountId(accountId)
+                                                  .setEmail(NotificationRequest.Email.newBuilder().build())
+                                                  .build();
+
+    assertThatThrownBy(() -> mailService.sendSync(notificationRequest))
+        .isInstanceOf(NotificationException.class)
+        .hasMessageContaining("No recipients found in notification request");
+  }
+
+  @Test
+  @Owner(developers = ASHISHSANODIA)
+  @Category(UnitTests.class)
+  public void sendSyncNotification_NonExistingTemplateInRequest() {
+    NotificationRequest notificationRequest = NotificationRequest.newBuilder()
+                                                  .setId(id)
+                                                  .setAccountId(accountId)
+                                                  .setEmail(NotificationRequest.Email.newBuilder()
+                                                                .setTemplateId(mailTemplateName)
+                                                                .addAllEmailIds(Collections.singletonList(emailAdress))
+                                                                .build())
+                                                  .build();
+    when(notificationTemplateService.getTemplateAsString(eq(mailTemplateName), any())).thenReturn(Optional.empty());
+
+    assertThatThrownBy(() -> mailService.sendSync(notificationRequest))
+        .isInstanceOf(NotificationException.class)
+        .hasMessageContaining("Failed to send email for notification request")
+        .hasMessageContaining("possibly due to no valid template with name");
+  }
+
+  @Test
+  @Owner(developers = ASHISHSANODIA)
+  @Category(UnitTests.class)
+  public void sendSyncNotification_ValidCase_WithoutTemplateIdInRequest() {
+    NotificationRequest.Email emailBuilder = NotificationRequest.Email.newBuilder()
+                                                 .addAllEmailIds(List.of(emailAdress))
+                                                 .addAllCcEmailIds(List.of(emailAdress))
+                                                 .setSubject("test-subject")
+                                                 .setBody("test-body")
+                                                 .build();
+    NotificationRequest notificationRequest =
+        NotificationRequest.newBuilder().setId(id).setAccountId(accountId).setEmail(emailBuilder).build();
+
+    NotificationProcessingResponse notificationExpectedResponse =
+        NotificationProcessingResponse.builder().result(List.of(true)).shouldRetry(false).build();
+    when(notificationSettingsService.getSmtpConfigResponse(eq(accountId)))
+        .thenReturn(new SmtpConfigResponse(SmtpConfig.builder().build(), Collections.emptyList()));
+    when(notificationTemplateService.getTemplateAsString(eq(mailTemplateName), any()))
+        .thenReturn(Optional.of("this is test notification"));
+    when(delegateGrpcClientWrapper.executeSyncTaskV2(any()))
+        .thenReturn(NotificationTaskResponse.builder().processingResponse(notificationExpectedResponse).build());
+
+    NotificationTaskResponse notificationTaskResponse = mailService.sendSync(notificationRequest);
+
+    verifyNoInteractions(notificationTemplateService);
+    ArgumentCaptor<DelegateTaskRequest> delegateTaskRequestArgumentCaptor =
+        ArgumentCaptor.forClass(DelegateTaskRequest.class);
+    verify(delegateGrpcClientWrapper, times(1)).executeSyncTaskV2(delegateTaskRequestArgumentCaptor.capture());
+
+    DelegateTaskRequest actualDelegateTaskRequest = delegateTaskRequestArgumentCaptor.getValue();
+    MailTaskParams mailTaskParams = (MailTaskParams) actualDelegateTaskRequest.getTaskParameters();
+
+    assertThat(mailTaskParams.getEmailIds()).isNotEmpty();
+    assertThat(mailTaskParams.getEmailIds()).hasSize(1);
+    assertThat(mailTaskParams.getEmailIds()).contains(emailAdress);
+    assertThat(mailTaskParams.getCcEmailIds()).isNotEmpty();
+    assertThat(mailTaskParams.getCcEmailIds()).hasSize(1);
+    assertThat(mailTaskParams.getCcEmailIds()).contains(emailAdress);
+    assertEquals(emailBuilder.getSubject(), mailTaskParams.getSubject());
+    assertEquals(emailBuilder.getBody(), mailTaskParams.getBody());
+    assertEquals(notificationExpectedResponse, notificationTaskResponse.getProcessingResponse());
+  }
+
+  @SneakyThrows
+  @Test
+  @Owner(developers = ASHISHSANODIA)
+  @Category(UnitTests.class)
+  public void sendSyncNotification_ValidCase_WithTemplateIdInRequest() {
+    NotificationRequest notificationRequest = NotificationRequest.newBuilder()
+                                                  .setId(id)
+                                                  .setAccountId(accountId)
+                                                  .setEmail(NotificationRequest.Email.newBuilder()
+                                                                .setTemplateId(mailTemplateName)
+                                                                .addAllEmailIds(List.of(emailAdress))
+                                                                .addAllCcEmailIds(List.of(emailAdress))
+                                                                .setSubject("some-subject")
+                                                                .setBody("some-body")
+                                                                .build())
+                                                  .build();
+    NotificationProcessingResponse notificationExpectedResponse =
+        NotificationProcessingResponse.builder().result(List.of(true)).shouldRetry(false).build();
+    when(notificationSettingsService.getSmtpConfigResponse(eq(accountId)))
+        .thenReturn(new SmtpConfigResponse(SmtpConfig.builder().build(), Collections.EMPTY_LIST));
+    when(yamlUtils.read(any(), (TypeReference<EmailTemplate>) any())).thenReturn(emailTemplate);
+    when(notificationTemplateService.getTemplateAsString(eq(mailTemplateName), any()))
+        .thenReturn(Optional.of("this is test notification"));
+    when(delegateGrpcClientWrapper.executeSyncTaskV2(any()))
+        .thenReturn(NotificationTaskResponse.builder().processingResponse(notificationExpectedResponse).build());
+
+    NotificationTaskResponse notificationTaskResponse = mailService.sendSync(notificationRequest);
+
+    ArgumentCaptor<DelegateTaskRequest> delegateTaskRequestArgumentCaptor =
+        ArgumentCaptor.forClass(DelegateTaskRequest.class);
+    verify(delegateGrpcClientWrapper, times(1)).executeSyncTaskV2(delegateTaskRequestArgumentCaptor.capture());
+
+    DelegateTaskRequest actualDelegateTaskRequest = delegateTaskRequestArgumentCaptor.getValue();
+    MailTaskParams mailTaskParams = (MailTaskParams) actualDelegateTaskRequest.getTaskParameters();
+
+    assertThat(mailTaskParams.getEmailIds()).isNotEmpty();
+    assertThat(mailTaskParams.getEmailIds()).hasSize(1);
+    assertThat(mailTaskParams.getEmailIds()).contains(emailAdress);
+    assertThat(mailTaskParams.getCcEmailIds()).isNotEmpty();
+    assertThat(mailTaskParams.getCcEmailIds()).hasSize(1);
+    assertThat(mailTaskParams.getCcEmailIds()).contains(emailAdress);
+    assertEquals(emailTemplate.getSubject(), mailTaskParams.getSubject());
+    assertEquals(emailTemplate.getBody(), mailTaskParams.getBody());
+    assertEquals(notificationExpectedResponse, notificationTaskResponse.getProcessingResponse());
   }
 }
